# pr0t0n-orchestrator

./: .gitignore  LICENSE  README.md
crates/pr0t0n_orch/: .env  Cargo.toml
crates/pr0t0n_orch/src/: errors.rs  lib.rs  main.rs  sync.rs  testing.rs
crates/pr0t0n_orch/src/websocket/: mod.rs  server.rs  session.rs
crates/pr0t0n_orch/tests/: sync.rs  websocket.rs  websocket_loadtest.rs
crates/pr0t0n_orch_cli/: Cargo.toml  README.md
crates/pr0t0n_orch_cli/examples/data/: config.yml
crates/pr0t0n_orch_cli/src/: main.rs
crates/pr0t0n_orch_cli/tests/: e2e.rs
crates/pr0t0n_orch_client/: Cargo.toml
crates/pr0t0n_orch_client/src/: lib.rs  main.rs
crates/pr0t0n_orch_client/tests/: e2e.rs
crates/pr0t0n_orch_db/: .env  Cargo.toml  README.md
crates/pr0t0n_orch_db/migrations/2021-10-24-214748_init/: down.sql  up.sql
crates/pr0t0n_orch_db/src/: err.rs  errors.rs  lib.rs  main.rs  schema.rs  test_utils.rs  testing.rs
crates/pr0t0n_orch_db/src/models/: asset_groups.rs  assets.rs  configs.rs  enums.rs  generic.rs  input_configs.rs  mod.rs  service_edges.rs  services.rs  system.rs
scripts/: check_services.sql  delete_services.sql
