[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
edition = "2018"
name = "pr0t0n_orch"
version = "1.0.0"

[lib]
name = "pr0t0n_orch"
path = "src/lib.rs"

[[bin]]
name = "pr0t0n_orch_main"
path = "src/client.rs"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-files = "0.3"
actix-web = "3"
actix-web-actors = "3"
awc = "2"
bytes = "0.5.3"
env_logger = "0.8"
futures = "0.3.1"
pr0t0n_orch_db = {path = "../pr0t0n_orch_db"}
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
