[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
edition = "2018"
name = "pr0t0n_orch"
version = "1.0.0"

[lib]
name = "pr0t0n_orch"
path = "src/lib.rs"

[[bin]]
name = "pr0t0n_orch_main"
path = "src/main.rs"

[dependencies]
actix = "0.10.0"
actix-http = "2.1"
actix-rt = "1.1"
actix-service = "1.0.6"
actix-web = "3.2"
actix-web-actors = "3.0"

awc = "2.0.3"
bytes = "1.1.0"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.0"
pr0t0n_orch_db = {path = "../pr0t0n_orch_db"}
r2d2 = "0.8.9"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.13"
uuid = {version = "0.5", features = ["serde", "v4"]}
