[package]
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
edition = "2018"
name = "pr0t0n_orch_cli"
version = "0.1.0"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-files = "0.3"
actix-web = "3"
actix-web-actors = "3"
awc = "2"
bytes = "0.5.3"
env_logger = "0.8"
futures = "0.3.1"
pr0t0n_orch_db = {path = "../pr0t0n_orch_db"}

# standard crate data is left out
[dev-dependencies]
actix-rt = "*"
pr0t0n_orch = {path = "../pr0t0n_orch"}
