[package]
edition = "2018"
name = "pr0t0n_orch_db"
version = "0.1.0"

[dependencies]
deadpool-diesel = {version = "0.3.1", features = ["postgres"]}
diesel = {version = "1.4.8", features = ["postgres", "uuid", "chrono"]}
dotenv = "0.15.0"
log = "0.4.0"
tokio = {version = "0.2", features = ["macros"]}
tokio-postgres = "0.7.5"

[dev-dependencies]
