[package]
edition = "2018"
name = "pr0t0n_orch_db"
version = "0.1.0"

[dependencies]
diesel = {version = "1.4.4", features = ["postgres", "r2d2"]}
diesel-enum = "0.0.5"
# diesel_codegen = {version = "0.16.0", features = ["postgres"]}
dotenv = "0.15.0"
log = "0.4.0"
r2d2 = "0.8.9"
serde = {version = "1.0.80", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
assert-json-diff = "2.0.1"
